<?xml version="1.0"?>
<package>

  <name>uial</name>
  <version>1.0.0</version>
  <description>This is the User Interface Abstraction Layer for UWSim.</description>
  <maintainer email="garciaju@uji.es">Juan Carlos Garcia</maintainer>
  <license>BSD</license>
  <author email="garciaju@uji.es">Juan Carlos Garcia</author>
  <url>https://github.com/jcgarsan/uial</url>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mar_robot_arm5e</build_depend>  
  <build_depend>visp</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>mar_robot_arm5e</run_depend>  
  <run_depend>visp</run_depend>

</package>
